--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -197,7 +197,7 @@
 
 .cartContainer .purchaseBtn{
     padding: 8px;
-    font-size: 1.1rem;
+    font-size: .9rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     cursor: pointer;
@@ -219,7 +219,7 @@
     color: rgb(255, 255, 255);
 }
 .cartContainer .continueShoppingBtn{
-    font-size: 1rem;
+    font-size: .9rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     cursor: pointer;
@@ -231,7 +231,8 @@
     color: rgb(92, 92, 92);
     /* box-shadow: 0 2px 2px 0 rgba(135,97,36,0.14), 0 3px 1px -2px rgba(135,97,36,0.2), 0 1px 5px 0 rgba(135,97,36,0.12); */
     border: 1px solid transparent;
-    margin-top: -3rem;
+    /* margin-top: -3rem; */
+    margin-bottom: -5rem;
     transition: all .2s;
 }
 .continueShoppingBtn:hover{
@@ -485,7 +486,7 @@
 }
 
 .emailDiv span:last-child{
-    margin-left: 5px;
+    /* margin-left: 5px; */
     font-size: 1.2rem;
     font-weight: 600;
     color: rgb(73, 91, 207);
@@ -512,7 +513,7 @@
     cursor: pointer;
     padding: 10px;
     /* border-radius: 5px; */
-    background-color: rgb(120, 203, 87);
+    /* background-color: rgb(120, 203, 87); */
     color: rgb(255, 255, 255);
     /* border: 1px solid transparent; */
     transition: all .2s;
@@ -531,6 +532,7 @@
     align-items: center;
     transition: all .2s;
 }
+
 
 
 .orderLinks a:first-child:hover {
@@ -675,6 +677,9 @@
 
     .purchaseBtn{
         width: 100%;
+    }
+    .continueShoppingBtn{
+        margin-bottom: -4rem !important;
     }
     .orderContainer{
         flex-direction: column;
